# ArcLink

./: README.md  metadata.json  package.json  server.ts
arclink-remote/: Cargo.toml  README.md
arclink-remote/crates/arclink-common/: Cargo.toml
arclink-remote/crates/arclink-host/: Cargo.toml
arclink-remote/crates/arclink-host/src/: app.rs  main.rs
arclink-remote/crates/arclink-host/src/capture/: mod.rs
arclink-remote/crates/arclink-host/src/input/: mod.rs
arclink-remote/crates/arclink-host/src/logging/: mod.rs
arclink-remote/crates/arclink-host/src/metrics/: mod.rs
arclink-remote/crates/arclink-host/src/network/: mod.rs
arclink-remote/crates/arclink-host/src/session/: mod.rs
arclink-remote/crates/arclink-host/src/ui/: mod.rs
arclink-remote/crates/arclink-protocol-test/: Cargo.toml
arclink-remote/crates/arclink-viewer/: Cargo.toml
arclink-remote/crates/arclink-viewer/src/: app.rs  main.rs
arclink-remote/crates/arclink-viewer/src/input/: mod.rs
arclink-remote/crates/arclink-viewer/src/logging/: mod.rs
arclink-remote/crates/arclink-viewer/src/metrics/: mod.rs
arclink-remote/crates/arclink-viewer/src/network/: mod.rs
arclink-remote/crates/arclink-viewer/src/render/: mod.rs
arclink-remote/crates/arclink-viewer/src/session/: mod.rs
arclink-remote/crates/arclink-viewer/src/ui/: mod.rs
arclink-remote/docs/: ARCHITECTURE.md  MANUAL_TEST.md  PERFORMANCE_PLAN.md  PROTOCOL.md  ROADMAP.md  SECURITY_BOUNDARIES.md
arclink-remote/scripts/: run-host.ps1  run-viewer.ps1
src/: App.tsx  index.css  types.ts
src/components/: VirtualDesktop.tsx
(+8 files in other folders)
