[package]
name = "arclink-host"
version = "0.1.0"
edition = "2021"

[dependencies]
arclink-common = { path = "../arclink-common" }
eframe = { version = "0.26", features = ["wgpu"] }
egui = "0.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

# Windows specific native dependencies for inputs and screen capture
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
] }
