[package]
name = "arclink-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
arclink-common = { path = "../arclink-common" }
eframe = { version = "0.26", features = ["wgpu"] }
egui = "0.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
